--- a/TriangleType/PrimeFactorizationTestClass/PrimeFactorizationTestClass.csproj
+++ b/TriangleType/PrimeFactorizationTestClass/PrimeFactorizationTestClass.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{F73CF46C-E2A8-4BCA-ADC9-C927CE550761}</ProjectGuid>
+    <ProjectGuid>{E7912943-9747-45EB-82C3-F72E51425978}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Tests</RootNamespace>
-    <AssemblyName>Tests</AssemblyName>
+    <RootNamespace>PrimeFactorizationTestClass</RootNamespace>
+    <AssemblyName>PrimeFactorizationTestClass</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -45,17 +45,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestClass.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PrimeFactorization\PrimeFactorization.csproj">
       <Project>{0CC3FD7A-CDB7-42F1-9F97-0AC731BEF278}</Project>
       <Name>PrimeFactorization</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\TriangleType\TriangleType.csproj">
-      <Project>{2166F140-D236-4872-A1DA-2946031A9CC1}</Project>
-      <Name>TriangleType</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
